# sentinel-key-manager

./: .env-example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_secrets.py  0003_add_role_and_policies.py  0004_create_audit_log.py  0005_create_encryption_keys.py  0006_encrypt_secrets.py  0007_create_secret_versions.py  0008_audit_hash_chain.py  0009_create_dynamic_credentials.py
src/application/audit/: anomaly_service.py  service.py
src/application/auth/: exceptions.py  service.py
src/application/dynamic_secrets/: service.py
src/application/keys/: service.py
src/application/secrets/: exceptions.py  service.py
src/core/: config.py
src/core/crypto/: aes.py  envelope.py  shamir.py
src/core/security/: password.py  tokens.py
src/domain/: anomaly.py  audit_chain.py  rbac.py
src/infrastructure/: database.py  dynamic_db.py  leases.py  nats.py  rate_limit.py  redis.py
src/infrastructure/crypto/: keyring.py  seal.py  shamir_unseal.py
src/infrastructure/models/: __init__.py  audit.py  dynamic_credential.py  encryption_key.py  policy.py  secret.py  secret_version.py  user.py
src/infrastructure/repositories/: dynamic_credential_repository.py  key_repository.py  policy_repository.py  secret_repository.py  (+2 more)
src/presentation/: rate_limit.py  security.py
tests/: test_aes.py  test_anomaly.py  test_audit_chain.py  test_envelope.py  test_password.py  test_rbac.py  test_seal.py  test_security_headers.py  test_shamir.py  test_tokens.py
(+8 files in other folders)
